@@ -1,3 +1,4 @@
 .travis.yml
 README.org
 README.html
+build.sh
