@@ -40,8 +40,15 @@ The data set is available in the R package ElemStatLearn:
 
 <<data>>=
 
-library(ElemStatLearn)
-data(spam)
+if(require(ElemStatLearn)){
+  data(spam)
+}else{
+  spam <- unique(data.frame(
+    iris[,1:4], 
+    spam=factor(
+      ifelse(iris[, "Species"]=="setosa", "spam", "email"),
+      c("email", "spam"))))
+}
 is.label <- names(spam) == "spam"
 X <- as.matrix(spam[,!is.label])
 y <- spam[,is.label]
@@ -64,10 +71,14 @@ training set.
 
 <<model>>=
 
-library(glmnet)
-system.time({
-  fit <- cv.glmnet(sets$train$features, sets$train$label, family="binomial")
-})
+test.guess <- if(require(glmnet)){
+  print(system.time({
+    fit <- cv.glmnet(sets$train$features, sets$train$label, family="binomial")
+  }))
+  as.numeric(predict(fit, sets$test$features))
+}else{
+  rnorm(nrow(sets$test$features))
+}
 
 @ 
 
@@ -81,39 +92,61 @@ compute the ROC curves using WeightedROC, PRROC, pROC, and ROCR.
 
 <<test-ROC-time>>=
 
-library(WeightedROC)
-library(ROCR)
-library(pROC)
-library(PRROC)
-set <- sets$test
-label.num <- ifelse(set$label=="spam", 1, 0)
-guess <- as.numeric(predict(fit, set$features))
-df.list <- split(data.frame(guess, label.num), set$label)
-if(require(microbenchmark)){
-  microbenchmark(PRROC1={
-    prroc1 <- roc.curve(
-      df.list$spam$guess, df.list$email$guess, 
-      curve=TRUE)
+bench <- function(guess.vec, label.vec){
+  label.num <- ifelse(label.vec=="spam", 1, 0)
+  df.list <- split(data.frame(guess.vec, label.num), label.vec)
+  time.fun <- if(require(microbenchmark)){
+    microbenchmark
+  }else{
+    function(..., times){
+      L <- match.call()
+      pkg.list <- L[-c(1, length(L))]
+      res.list <- list()
+      for(expr in names(pkg.list)){
+        e <- pkg.list[[expr]]
+        time <- system.time(eval(e))[["elapsed"]]*1e9
+        res.list[[expr]] <- data.frame(expr, time)
+      }
+      do.call(rbind, res.list)
+    }
+  }
+  time.res <- function(..., times){
+    L <- list(...)
+    list(time=time.fun(..., times=times), result=do.call(rbind, L))
+  }
+  time.res(PRROC1={
+    if(require(PRROC)){
+      prroc1 <- roc.curve(
+        df.list$spam$guess.vec, df.list$email$guess.vec, 
+        curve=TRUE)
+      data.frame(FPR=prroc1$curve[,1], TPR=prroc1$curve[,2], package="PRROC1")
+    }
   }, PRROC2={
-    prroc2 <- roc.curve(guess, weights.class0=label.num, curve=TRUE)
+    if(require(PRROC)){
+      prroc2 <- roc.curve(guess.vec, weights.class0=label.num, curve=TRUE)
+      data.frame(FPR=prroc2$curve[,1], TPR=prroc2$curve[,2], package="PRROC2")
+    }
   }, WeightedROC={
-    wroc <- WeightedROC(guess, label.num)
+    if(require(WeightedROC)){
+      wroc <- WeightedROC(guess.vec, label.vec)
+      data.frame(wroc[,c("FPR", "TPR")], package="WeightedROC")
+    }
   }, ROCR={
-    pred <- prediction(guess, set$label)
-    perf <- performance(pred, "tpr", "fpr")
+    if(require(ROCR)){
+      pred <- prediction(guess.vec, label.vec)
+      perf <- performance(pred, "tpr", "fpr")
+      data.frame(
+        FPR=perf@x.values[[1]], TPR=perf@y.values[[1]], package="ROCR")
+    }
   }, pROC={
-    proc <- roc(set$label, guess, algorithm=2)
+    if(require(pROC)){
+      proc <- roc(label.vec, guess.vec, algorithm=2)
+      data.frame(
+        FPR=1-proc$specificities, TPR=proc$sensitivities, package="pROC")
+    }
   }, times=10)
-}else{
-  prroc1 <- roc.curve(
-    df.list$spam$guess, df.list$email$guess, 
-    curve=TRUE)
-  prroc2 <- roc.curve(guess, weights.class0=label.num, curve=TRUE)
-  wroc <- WeightedROC(guess, set$label)
-  pred <- prediction(guess, set$label)
-  perf <- performance(pred, "tpr", "fpr")
-  proc <- roc(set$label, guess, algorithm=2)
 }
+L <- bench(test.guess, sets$test$label)
 
 @ 
 
@@ -126,26 +159,15 @@ show that they are all the same.
 
 <<test-ROC-curves, fig=TRUE>>=
 
-perfDF <- function(p){
-  data.frame(FPR=p@x.values[[1]], TPR=p@y.values[[1]], package="ROCR")
+if(require(ggplot2)){
+  rocPlot <- ggplot()+
+    geom_path(aes(FPR, TPR, color=package, linetype=package),
+              data=L$result, size=1)+
+    coord_equal()
+  print(rocPlot)
+}else{
+  plot(1, main="ggplot2 not found")
 }
-procDF <- function(p){
-  data.frame(FPR=1-p$specificities, TPR=p$sensitivities, package="pROC")
-}
-prrocDF <- function(p, package){
-  data.frame(FPR=p$curve[,1], TPR=p$curve[,2], package)
-}
-roc.curves <- 
-  rbind(data.frame(wroc[,c("FPR", "TPR")], package="WeightedROC"),
-        perfDF(perf), procDF(proc), 
-        prrocDF(prroc1, "PRROC1"), 
-        prrocDF(prroc2, "PRROC2"))
-library(ggplot2)
-rocPlot <- ggplot()+
-  geom_path(aes(FPR, TPR, color=package, linetype=package),
-            data=roc.curves, size=1)+
-  coord_equal()
-print(rocPlot)
 
 @ 
 
@@ -157,43 +179,29 @@ changes.
 
 <<scaling, fig=TRUE>>=
 
-if(require(microbenchmark)){
-  stats.by.size.expr <- list()
-  ms.by.size <- list()
-  for(size in c(50, 100, 200, 400, 800, 1200, 1500, 2000, 2300)){
-    indices <- as.integer(seq(1, length(set$label), l=size))
-    y <- set$label[indices]
-    y.hat <- guess[indices]
-    this.size <- microbenchmark(PRROC1={
-      prroc1 <- roc.curve(
-        df.list$spam$guess, df.list$email$guess, 
-        curve=TRUE)
-    }, PRROC2={
-      prroc2 <- roc.curve(guess, weights.class0=label.num, curve=TRUE)
-    }, WeightedROC={
-      wroc <- WeightedROC(y.hat, y)
-    }, ROCR={
-      pred <- prediction(y.hat, y)
-      perf <- performance(pred, "tpr", "fpr")
-    }, pROC.1={
-      proc <- roc(y, y.hat, algorithm=1)
-    }, pROC.2={
-      proc <- roc(y, y.hat, algorithm=2)
-    }, times=10)
-    this.size$milliseconds <- this.size$time/1e6
-    ms.by.size[[paste(size)]] <- data.frame(size, this.size)
-    this.by.expr <- split(this.size, this.size$expr)
-    for(expr in names(this.by.expr)){
-      stats <- with(this.by.expr[[expr]], {
-        data.frame(median=median(milliseconds),
-                   q25=quantile(milliseconds, 0.25),
-                   q75=quantile(milliseconds, 0.75))
-      })
-      stats.by.size.expr[[paste(size, expr)]] <- data.frame(size, expr, stats)
-    }
+stats.by.size.expr <- list()
+ms.by.size <- list()
+for(size in c(50, 100, 200, 400, 800, 1200, 1500, 2000, 2300)){
+  indices <- as.integer(seq(1, length(sets$test$label), l=size))
+  y <- sets$test$label[indices]
+  y.hat <- test.guess[indices]
+  this.L <- bench(y.hat, y)
+  this.size <- this.L$time
+  this.size$milliseconds <- this.size$time/1e6
+  ms.by.size[[paste(size)]] <- data.frame(size, this.size)
+  this.by.expr <- split(this.size, this.size$expr)
+  for(expr in names(this.by.expr)){
+    stats <- with(this.by.expr[[expr]], {
+      data.frame(median=median(milliseconds),
+                 q25=quantile(milliseconds, 0.25),
+                 q75=quantile(milliseconds, 0.75))
+    })
+    stats.by.size.expr[[paste(size, expr)]] <- data.frame(size, expr, stats)
   }
-  ms <- do.call(rbind, ms.by.size)
-  algo.stats <- do.call(rbind, stats.by.size.expr)
+}
+ms <- do.call(rbind, ms.by.size)
+algo.stats <- do.call(rbind, stats.by.size.expr)
+if(require(ggplot2)){
   timePlot <- ggplot()+
     geom_ribbon(aes(size, ymin=q25, ymax=q75, fill=expr), 
                 data=algo.stats, alpha=1/2)+
@@ -201,8 +209,10 @@ if(require(microbenchmark)){
     geom_point(aes(size, milliseconds, color=expr), data=ms, pch=1)+
     scale_y_log10("milliseconds")+
     scale_x_log10("data set size")+
-    ggtitle("mean +/- 1 standard deviation")
+    ggtitle("median and quartiles")
   print(timePlot)
+}else{
+  plot(1, main="ggplot2 not available")
 }
 
 @ 
@@ -217,54 +227,5 @@ affect the speed ordering of the other algorithms.
 \item For small data sets (N < 500), WeightedROC is fastest, followed by pROC.1,
   then pROC2, then ROCR.
 \end{itemize}
-
-\section{AUC computation}
-
-<<test-AUC-microbenchmark>>=
-
-auc.list <- list()
-if(require(microbenchmark)){
-  auc.time.df <- microbenchmark(glmnet={
-    auc.list$glmnet <- glmnet::auc(label.num, guess)
-  }, PRROC1={
-    auc.list$PRROC1 <- roc.curve(
-      df.list$spam$guess, df.list$email$guess, curve=FALSE)$auc
-  }, PRROC2={
-    auc.list$PRROC2 <- roc.curve(
-      guess, weights.class0=label.num, curve=FALSE)$auc
-  }, WeightedROC={
-    wroc <- WeightedROC(guess, set$label)
-    auc.list$WeightedROC <- WeightedAUC(wroc)
-  }, ROCR={
-    pred <- prediction(guess, set$label)
-    auc.list$ROCR <- performance(pred, "auc")@y.values[[1]]
-  }, pROC={
-    proc <- roc(set$label, guess, algorithm=2)
-    auc.list$pROC <- as.numeric(proc$auc)
-  }, times=10)
-  print(auc.time.df)
-}else{
-  auc.list$PRROC <- roc.curve(df.list$spam$guess, df.list$email$guess)$auc
-  auc.list$WeightedROC <- WeightedAUC(wroc)
-  auc.list$ROCR <- performance(pred, "auc")@y.values[[1]]
-  auc.list$pROC <- as.numeric(proc$auc)
-  auc.list$glmnet <- glmnet::auc(label.num, guess)
-}
-
-@ 
-
-The output above shows that glmnet is by far the fastest computation,
-and pROC is by far the slowest. The output below shows that the
-functions all compute the same AUC:
-
-<<test-auc-values>>=
-
-do.call(rbind, auc.list)
-
-@ 
-
-Tied scores are only problematic in glmnet::auc if weights are
-specified as the third argument, so in this case it works fine (tied
-scores but no weights specified).
 
 \end{document}
