@@ -2,6 +2,10 @@
 
 new tests compare with geometry and GsymPoint.
 
+simplify vignette/examples (remove AUC from Speed vignette).
+
+always require rather than library the suggested packages.
+
 2017.08.25
 
 comparisons with PRROC.
